chore: move code into src folder

--- a/src/image-compression/pca.ipynb
+++ b/src/image-compression/pca.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SVD 压缩图像"
+    "# PCA 压缩图像"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "\n",
     "plt.rcParams[\"font.sans-serif\"] = \"SimHei\"\n",
     "plt.rcParams[\"axes.unicode_minus\"] = False\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -27,9 +27,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "读取图像，分别提取出 RGB 三个通道的数据，并对它们进行 SVD 分解。\n",
+    "手动实现一个简易的 PCA，和 `scikit-learn` 的 PCA 保持相同 API："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PCA:\n",
+    "    def __init__(self, n_components=None):\n",
+    "        self.n_components = n_components\n",
+    "        self.mean = None\n",
+    "        self.components = None\n",
+    "        self.explained_variance_ratio = None\n",
     "\n",
-    "取 0.5、0.9、0.99、0.999 四个累计贡献率阈值，观察需要多少个奇异值的共同贡献，才能达到这个精度。"
+    "    def fit(self, data):\n",
+    "        self.mean = np.mean(data, axis=0)\n",
+    "        centered_data = data - self.mean\n",
+    "\n",
+    "        cov = np.cov(centered_data.T)\n",
+    "        eigenvalues, eigenvectors = np.linalg.eig(cov)\n",
+    "\n",
+    "        sorted_indices = np.argsort(eigenvalues)[::-1]\n",
+    "        eigenvalues = eigenvalues[sorted_indices]\n",
+    "        eigenvectors = eigenvectors[:, sorted_indices]\n",
+    "\n",
+    "        self.components = eigenvectors[:, : self.n_components]\n",
+    "        self.explained_variance_ratio = eigenvalues / np.sum(eigenvalues)\n",
+    "\n",
+    "    def transform(self, data):\n",
+    "        centered_data = data - self.mean\n",
+    "        return np.dot(centered_data, self.components)\n",
+    "\n",
+    "    def fit_transform(self, data):\n",
+    "        self.fit(data)\n",
+    "        return self.transform(data)\n",
+    "\n",
+    "    def inverse_transform(self, pca_data):\n",
+    "        return np.dot(pca_data, self.components.T) + self.mean\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "读取图像，分别提取出 RGB 三个通道的数据，并分析它们的主成分。\n",
+    "\n",
+    "取 0.5、0.9、0.99、0.999 四个累计贡献率阈值，观察需要多少个主成分的共同贡献，才能达到这个精度。"
    ]
   },
   {
@@ -70,6 +117,7 @@
     "fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
     "fig.suptitle(\"主成分数-累计贡献率\")\n",
     "\n",
+    "\n",
     "def plot_accumulative_contribution(color):\n",
     "    config = configs[color]\n",
     "    title = config[\"title\"]\n",
@@ -77,9 +125,9 @@
     "    data = config[\"data\"]\n",
     "    ax = axes[config[\"axis\"]]\n",
     "\n",
-    "    _, s, _ = np.linalg.svd(data)\n",
-    "    accumulative_contribution = np.cumsum(s) / np.sum(s)\n",
-    "\n",
+    "    pca = PCA()\n",
+    "    pca.fit(data)\n",
+    "    accumulative_contribution = np.cumsum(pca.explained_variance_ratio)\n",
     "    ax.plot(accumulative_contribution, color=color)\n",
     "    ax.set_title(title)\n",
     "\n",
@@ -90,10 +138,11 @@
     "        ax.plot(component_num, precision, color=color, marker=\"o\")\n",
     "        ax.text(component_num + 5, precision - 0.04, f\"({component_num},{precision})\")\n",
     "\n",
+    "\n",
     "plot_accumulative_contribution(\"red\")\n",
     "plot_accumulative_contribution(\"green\")\n",
     "plot_accumulative_contribution(\"blue\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -101,9 +150,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "从上图可以看到，奇异值的累计贡献率一开始随着秩数的增加而快速上升，在 170 个左右时达到 99%。\n",
+    "从上图可以看到，主成分的累计贡献率一开始随着主成分数的增加而快速上升，红色和绿色通道在 50 多个主成分时达到 99%，蓝色则需要 94 个。\n",
     "\n",
-    "为了压缩的质量，我们以蓝色为准，分别选择 4、13、34、95、176 这五个秩数，分别观察它们的压缩效果。"
+    "为了压缩的质量，我们以蓝色为准，分别选择 2、5、11、27、94 这五个主成分数，分别观察它们的压缩效果。"
    ]
   },
   {
@@ -112,24 +161,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compress_component(component, k):\n",
-    "    u, s, vh = np.linalg.svd(component)\n",
-    "    return (u[:, :k] @ np.diag(s[:k])) @ vh[:k]\n",
-    "\n",
     "fig, axes = plt.subplots(2, 3, figsize=(15, 5))\n",
     "fig.suptitle(\"压缩效果对比图\")\n",
     "\n",
-    "rank_list = (4, 13, 34, 95, 176)\n",
+    "n_components_list = (2, 5, 11, 27, 94)\n",
     "\n",
-    "for index, rank in enumerate(rank_list):\n",
-    "    compressed = np.dstack((\n",
-    "        compress_component(red_component, rank),\n",
-    "        compress_component(green_component, rank),\n",
-    "        compress_component(blue_component, rank),\n",
-    "    )).astype(np.uint8)\n",
+    "for index, n_components in enumerate(n_components_list):\n",
+    "    pca = PCA(n_components)\n",
+    "    compressed = np.dstack(\n",
+    "        (\n",
+    "            pca.inverse_transform(pca.fit_transform(red_component)),\n",
+    "            pca.inverse_transform(pca.fit_transform(green_component)),\n",
+    "            pca.inverse_transform(pca.fit_transform(blue_component)),\n",
+    "        )\n",
+    "    ).astype(np.uint8)\n",
     "    ax = axes[index // 3, index % 3]\n",
     "    ax.imshow(compressed)\n",
-    "    ax.set_title(f\"秩={rank}，精度={precision_list[index]}\")\n",
+    "    ax.set_title(f\"主成分数={n_components}，精度={precision_list[index]}\")\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])\n",
     "\n",
@@ -137,7 +185,7 @@
     "axes[1][2].set_title(\"原图\")\n",
     "axes[1][2].set_xticks([])\n",
     "axes[1][2].set_yticks([])\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
@@ -157,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
