--- a/src/linear-regression/main.ipynb
+++ b/src/linear-regression/main.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "plt.rcParams[\"font.sans-serif\"] = \"SimHei\"\n",
     "plt.rcParams[\"axes.unicode_minus\"] = False\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "housing = np.loadtxt(\"housing.data\").T\n",
-    "housing = housing[:, np.random.permutation(housing.shape[1])]"
+    "housing = housing[:, np.random.permutation(housing.shape[1])]\n"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "train_X = X[:, :TRAINSET_SIZE]\n",
     "train_y = y[:TRAINSET_SIZE]\n",
     "test_X = X[:, TRAINSET_SIZE:]\n",
-    "test_y = y[TRAINSET_SIZE:]"
+    "test_y = y[TRAINSET_SIZE:]\n"
    ]
   },
   {
@@ -92,10 +92,10 @@
     "    difference = np.dot(theta.T, train_X) - train_y\n",
     "    gradient = np.dot(train_X, difference.T) / n\n",
     "    theta -= LEARNING_RATE * gradient\n",
-    "    \n",
-    "    cost = np.sum(difference ** 2) / (2 * n)\n",
+    "\n",
+    "    cost = np.sum(difference**2) / (2 * n)\n",
     "    if iteration % 100 == 0:\n",
-    "        costs.append(cost)"
+    "        costs.append(cost)\n"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "axes[1].set_ylabel(\"损失值\")\n",
     "\n",
     "fig.suptitle(\"梯度下降线性回归预测房价\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
