chore: switch to conda

--- a/src/image-compression/pca.ipynb
+++ b/src/image-compression/pca.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "plt.rcParams[\"font.sans-serif\"] = \"SimHei\"\n",
     "plt.rcParams[\"axes.unicode_minus\"] = False\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ]
   },
   {
@@ -66,7 +66,7 @@
     "        return self.transform(data)\n",
     "\n",
     "    def inverse_transform(self, pca_data):\n",
-    "        return np.dot(pca_data, self.components.T) + self.mean\n"
+    "        return np.dot(pca_data, self.components.T) + self.mean"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "plot_accumulative_contribution(\"red\")\n",
     "plot_accumulative_contribution(\"green\")\n",
     "plot_accumulative_contribution(\"blue\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -185,7 +185,7 @@
     "axes[1][2].set_title(\"原图\")\n",
     "axes[1][2].set_xticks([])\n",
     "axes[1][2].set_yticks([])\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
