--- a/src/linear-regression/main.ipynb
+++ b/src/linear-regression/main.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 梯度下降线性回归"
+    "# 线性回归"
    ]
   },
   {
@@ -14,12 +14,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from time import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.rcParams[\"font.sans-serif\"] = \"SimHei\"\n",
     "plt.rcParams[\"axes.unicode_minus\"] = False\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ]
   },
   {
@@ -27,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "读取房价数据集，随机打乱记录顺序。"
+    "使用梯度下降法实现线性回归。"
    ]
   },
   {
@@ -36,34 +37,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing = np.loadtxt(\"housing.data\").T\n",
-    "housing = housing[:, np.random.permutation(housing.shape[1])]\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "划分训练集和测试集。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = housing[:-1, :]\n",
-    "X = (X - X.mean(axis=1, keepdims=True)) / X.std(axis=1, keepdims=True)\n",
-    "X = np.vstack((np.ones(X.shape[1]), X))\n",
-    "y = housing[-1, :]\n",
+    "class LinearRegression:\n",
+    "    def __init__(self, learning_rate=0.1, max_iter=500):\n",
+    "        self._learning_rate = learning_rate\n",
+    "        self._max_iter = max_iter\n",
+    "        self._losses = []\n",
     "\n",
+    "    def _loss(self, h, y):\n",
+    "        return np.mean((h - y) ** 2) / 2\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "        m, n = X.shape\n",
+    "        self._theta = np.random.rand(m, 1)\n",
+    "\n",
+    "        for iteration in range(self._max_iter):\n",
+    "            h = np.dot(self._theta.T, X)\n",
+    "            gradient = np.dot(X, (h - y).T) / n\n",
+    "            self._theta -= self._learning_rate * gradient\n",
+    "\n",
+    "            if (iteration + 1) % 100 == 0:\n",
+    "                self._losses.append(self._loss(h, y))\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        return np.dot(self._theta.T, X)[0]\n",
+    "\n",
+    "    def draw_loss(self):\n",
+    "        plt.plot(np.arange(1, len(self._losses) + 1) * 100, self._losses)\n",
+    "        plt.xlabel(\"迭代次数\")\n",
+    "        plt.ylabel(\"损失函数值\")\n",
+    "        plt.title(\"损失函数曲线\")\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "加载数据集的 helper 函数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "TRAINSET_SIZE = 400\n",
-    "train_X = X[:, :TRAINSET_SIZE]\n",
-    "train_y = y[:TRAINSET_SIZE]\n",
-    "test_X = X[:, TRAINSET_SIZE:]\n",
-    "test_y = y[TRAINSET_SIZE:]\n"
+    "\n",
+    "\n",
+    "def load_dataset():\n",
+    "    housing = np.loadtxt(\"housing.data\").T\n",
+    "    housing = housing[:, np.random.permutation(housing.shape[1])]\n",
+    "\n",
+    "    houses = housing[:-1, :]\n",
+    "    houses = (houses - houses.mean(axis=1, keepdims=True)) / houses.std(\n",
+    "        axis=1, keepdims=True\n",
+    "    )\n",
+    "    houses = np.vstack((np.ones(houses.shape[1]), houses))\n",
+    "    prices = housing[-1, :]\n",
+    "\n",
+    "    train_houses = houses[:, :TRAINSET_SIZE]\n",
+    "    train_prices = prices[:TRAINSET_SIZE]\n",
+    "    test_houses = houses[:, TRAINSET_SIZE:]\n",
+    "    test_prices = prices[TRAINSET_SIZE:]\n",
+    "\n",
+    "    sort_indices = test_prices.argsort()\n",
+    "    test_houses = test_houses[:, sort_indices]\n",
+    "    test_prices = test_prices[sort_indices]\n",
+    "\n",
+    "    return [train_houses, train_prices], [test_houses, test_prices]"
    ]
   },
   {
@@ -71,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "使用梯度下降法训练权重向量。"
+    "训练模型，绘制损失值曲线。"
    ]
   },
   {
@@ -80,22 +123,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m, n = train_X.shape\n",
-    "theta = np.random.rand(m, 1)\n",
+    "[train_houses, train_prices], [test_houses, test_prices] = load_dataset()\n",
     "\n",
-    "LEARNING_RATE = 0.01\n",
-    "ITERATION_NUM = 1000\n",
+    "start_time = time()\n",
+    "model = LinearRegression()\n",
+    "model.fit(train_houses, train_prices)\n",
+    "end_time = time()\n",
     "\n",
-    "costs = []\n",
-    "\n",
-    "for iteration in range(ITERATION_NUM):\n",
-    "    difference = np.dot(theta.T, train_X) - train_y\n",
-    "    gradient = np.dot(train_X, difference.T) / n\n",
-    "    theta -= LEARNING_RATE * gradient\n",
-    "\n",
-    "    cost = np.sum(difference**2) / (2 * n)\n",
-    "    if iteration % 100 == 0:\n",
-    "        costs.append(cost)\n"
+    "print(f\"Optimization took {end_time - start_time:.2f} seconds.\")\n",
+    "model.draw_loss()"
    ]
   },
   {
@@ -103,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "绘制预测值与真实值对比的散点图，和损失值变化的折线图。"
+    "预测房价，绘制散点图与真实值对比。"
    ]
   },
   {
@@ -112,26 +148,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(1, 2, figsize=(10, 4))\n",
+    "predictions = [model.predict(x) for x in test_houses.T]\n",
     "\n",
-    "sort_index = test_y.argsort()\n",
-    "test_X = test_X[:, sort_index]\n",
-    "test_y = test_y[sort_index]\n",
-    "\n",
-    "x_axis = np.arange(len(test_y))\n",
-    "predictions = [np.dot(theta.T, x)[0] for x in test_X.T]\n",
-    "axes[0].scatter(x_axis, predictions, s=5, c=\"blue\", label=\"预测值\")\n",
-    "axes[0].scatter(x_axis, test_y, s=5, c=\"red\", label=\"真实值\")\n",
-    "axes[0].set_xlabel(\"编号\")\n",
-    "axes[0].set_ylabel(\"价格\")\n",
-    "axes[0].legend()\n",
-    "\n",
-    "axes[1].plot(np.arange(len(costs)) * 100, costs)\n",
-    "axes[1].set_xlabel(\"迭代次数\")\n",
-    "axes[1].set_ylabel(\"损失值\")\n",
-    "\n",
-    "fig.suptitle(\"梯度下降线性回归预测房价\")\n",
-    "plt.show()\n"
+    "x_axis = np.arange(len(test_prices))\n",
+    "plt.scatter(x_axis, predictions, s=5, c=\"blue\", label=\"预测值\")\n",
+    "plt.scatter(x_axis, test_prices, s=5, c=\"red\", label=\"真实值\")\n",
+    "plt.xlabel(\"编号\")\n",
+    "plt.ylabel(\"价格\")\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   }
  ],
