--- a/src/logistic-regression/main.ipynb
+++ b/src/logistic-regression/main.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 梯度下降 Logistic 回归"
+    "# Logistic 回归"
    ]
   },
   {
@@ -21,7 +21,7 @@
     "\n",
     "plt.rcParams[\"font.sans-serif\"] = \"SimHei\"\n",
     "plt.rcParams[\"axes.unicode_minus\"] = False\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ]
   },
   {
@@ -39,10 +39,9 @@
    "outputs": [],
    "source": [
     "class LogisticRegression:\n",
-    "    def __init__(self, learning_rate=0.1, max_iter=500, record_loss=True):\n",
+    "    def __init__(self, learning_rate=0.1, max_iter=500):\n",
     "        self._learning_rate = learning_rate\n",
     "        self._max_iter = max_iter\n",
-    "        self._record_loss = record_loss\n",
     "        self._losses = []\n",
     "\n",
     "    def _logistic(self, z):\n",
@@ -53,28 +52,28 @@
     "\n",
     "    def fit(self, X, y):\n",
     "        m, n = X.shape\n",
-    "        self.theta = np.random.randn(m, 1) * 0.01\n",
+    "        self._theta = np.random.randn(m, 1) * 0.01\n",
     "\n",
     "        for iteration in range(self._max_iter):\n",
-    "            z = np.dot(self.theta.T, X)\n",
+    "            z = np.dot(self._theta.T, X)\n",
     "            h = self._logistic(z)\n",
     "            gradient = np.dot(X, (h - y).T) / n\n",
-    "            self.theta -= self._learning_rate * gradient\n",
+    "            self._theta -= self._learning_rate * gradient\n",
     "\n",
-    "            if self._record_loss and iteration % 100 == 0:\n",
+    "            if (iteration + 1) % 100 == 0:\n",
     "                self._losses.append(self._loss(h, y))\n",
     "\n",
     "    def predict(self, X):\n",
-    "        z = np.dot(self.theta.T, X)\n",
+    "        z = np.dot(self._theta.T, X)\n",
     "        h = self._logistic(z)\n",
     "        return int(h > 0.5)\n",
     "\n",
     "    def draw_loss(self):\n",
-    "        plt.plot(np.arange(len(self._losses)) * 100, self._losses)\n",
+    "        plt.plot(np.arange(1, len(self._losses) + 1) * 100, self._losses)\n",
     "        plt.xlabel(\"迭代次数\")\n",
     "        plt.ylabel(\"损失函数值\")\n",
     "        plt.title(\"损失函数曲线\")\n",
-    "        plt.show()\n"
+    "        plt.show()"
    ]
   },
   {
@@ -110,7 +109,7 @@
     "    labels = labels[shuffle_indices]\n",
     "    images = images[:, shuffle_indices]\n",
     "\n",
-    "    return images, labels\n"
+    "    return images, labels"
    ]
   },
   {
@@ -118,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "训练 Logistic 回归模型。"
+    "训练模型，绘制损失值曲线。"
    ]
   },
   {
@@ -131,10 +130,12 @@
     "test_images, test_labels = load_dataset(\"t10k\")\n",
     "\n",
     "start_time = time()\n",
-    "model = LogisticRegression(learning_rate=0.1, max_iter=500)\n",
+    "model = LogisticRegression()\n",
     "model.fit(train_images, train_labels)\n",
     "end_time = time()\n",
-    "print(f\"Optimization took {end_time - start_time:.2f} seconds.\")\n"
+    "\n",
+    "print(f\"Optimization took {end_time - start_time:.2f} seconds.\")\n",
+    "model.draw_loss()"
    ]
   },
   {
@@ -142,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "绘制损失函数曲线，测试准确率。"
+    "预测标签，测试准确率。"
    ]
   },
   {
@@ -151,15 +152,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.draw_loss()\n",
-    "\n",
     "train_predictions = [model.predict(image) for image in train_images.T]\n",
     "train_accuracy = np.mean(train_predictions == train_labels)\n",
     "print(f\"Training accuracy: {round(train_accuracy * 100, 2)}%\")\n",
     "\n",
     "test_predictions = [model.predict(image) for image in test_images.T]\n",
     "test_accuracy = np.mean(test_predictions == test_labels)\n",
-    "print(f\"Test accuracy: {round(test_accuracy * 100, 2)}%\")\n"
+    "print(f\"Test accuracy: {round(test_accuracy * 100, 2)}%\")"
    ]
   }
  ],
