--- a/src/image-compression/svd.ipynb
+++ b/src/image-compression/svd.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "plt.rcParams[\"font.sans-serif\"] = \"SimHei\"\n",
     "plt.rcParams[\"axes.unicode_minus\"] = False\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ]
   },
   {
@@ -95,7 +95,7 @@
     "plot_accumulative_contribution(\"red\")\n",
     "plot_accumulative_contribution(\"green\")\n",
     "plot_accumulative_contribution(\"blue\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "axes[1][2].set_title(\"原图\")\n",
     "axes[1][2].set_xticks([])\n",
     "axes[1][2].set_yticks([])\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
@@ -162,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
