style: better f-string

--- a/src/linear-regression/main.ipynb
+++ b/src/linear-regression/main.ipynb
@@ -125,12 +125,12 @@
    "source": [
     "[train_houses, train_prices], [test_houses, test_prices] = load_dataset()\n",
     "\n",
-    "start_time = time()\n",
+    "elapsed_time = -time()\n",
     "model = LinearRegression()\n",
     "model.fit(train_houses, train_prices)\n",
-    "end_time = time()\n",
+    "elapsed_time += time()\n",
     "\n",
-    "print(f\"Optimization took {end_time - start_time:.2f} seconds.\")\n",
+    "print(f\"Optimization took {elapsed_time:.2f} seconds.\")\n",
     "model.draw_loss()"
    ]
   },
