--- a/src/logistic-regression/main.ipynb
+++ b/src/logistic-regression/main.ipynb
@@ -129,12 +129,12 @@
     "train_images, train_labels = load_dataset(\"train\")\n",
     "test_images, test_labels = load_dataset(\"t10k\")\n",
     "\n",
-    "start_time = time()\n",
+    "elapsed_time = -time()\n",
     "model = LogisticRegression()\n",
     "model.fit(train_images, train_labels)\n",
-    "end_time = time()\n",
+    "elapsed_time += time()\n",
     "\n",
-    "print(f\"Optimization took {end_time - start_time:.2f} seconds.\")\n",
+    "print(f\"Optimization took {elapsed_time:.2f} seconds.\")\n",
     "model.draw_loss()"
    ]
   },
@@ -153,12 +153,12 @@
    "outputs": [],
    "source": [
     "train_predictions = [model.predict(image) for image in train_images.T]\n",
-    "train_accuracy = np.mean(train_predictions == train_labels)\n",
-    "print(f\"Training accuracy: {round(train_accuracy * 100, 2)}%\")\n",
+    "train_accuracy = np.mean(train_predictions == train_labels) * 100\n",
+    "print(f\"Training accuracy: {train_accuracy:.2f}%\")\n",
     "\n",
     "test_predictions = [model.predict(image) for image in test_images.T]\n",
-    "test_accuracy = np.mean(test_predictions == test_labels)\n",
-    "print(f\"Test accuracy: {round(test_accuracy * 100, 2)}%\")"
+    "test_accuracy = np.mean(test_predictions == test_labels) * 100\n",
+    "print(f\"Test accuracy: {test_accuracy:.2f}%\")"
    ]
   }
  ],
