style: minor changes on cocing styles

--- a/src/linear-regression/main.ipynb
+++ b/src/linear-regression/main.ipynb
@@ -46,8 +46,13 @@
     "    def _loss(self, h, y):\n",
     "        return np.mean((h - y) ** 2) / 2\n",
     "\n",
+    "    @property\n",
+    "    def _record_loss_interval(self):\n",
+    "        return max(1, self._max_iter // 10)\n",
+    "\n",
     "    def fit(self, X, y):\n",
     "        m, n = X.shape\n",
+    "\n",
     "        self._theta = np.random.rand(m, 1)\n",
     "\n",
     "        for iteration in range(self._max_iter):\n",
@@ -55,14 +60,17 @@
     "            gradient = np.dot(X, (h - y).T) / n\n",
     "            self._theta -= self._learning_rate * gradient\n",
     "\n",
-    "            if (iteration + 1) % 100 == 0:\n",
+    "            if (iteration + 1) % self._record_loss_interval == 0:\n",
     "                self._losses.append(self._loss(h, y))\n",
     "\n",
     "    def predict(self, X):\n",
     "        return np.dot(self._theta.T, X)[0]\n",
     "\n",
     "    def draw_loss(self):\n",
-    "        plt.plot(np.arange(1, len(self._losses) + 1) * 100, self._losses)\n",
+    "        plt.plot(\n",
+    "            np.arange(1, len(self._losses) + 1) * self._record_loss_interval,\n",
+    "            self._losses,\n",
+    "        )\n",
     "        plt.xlabel(\"迭代次数\")\n",
     "        plt.ylabel(\"损失函数值\")\n",
     "        plt.title(\"损失函数曲线\")\n",
@@ -114,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "训练模型，绘制损失值曲线。"
+    "训练模型，绘制损失函数曲线。"
    ]
   },
   {
@@ -139,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "预测房价，绘制散点图与真实值对比。"
+    "绘制预测值和真实值的对比散点图。"
    ]
   },
   {
@@ -148,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = [model.predict(x) for x in test_houses.T]\n",
+    "predictions = [model.predict(house) for house in test_houses.T]\n",
     "\n",
     "x_axis = np.arange(len(test_prices))\n",
     "plt.scatter(x_axis, predictions, s=5, c=\"blue\", label=\"预测值\")\n",
