--- a/src/logistic-regression/main.ipynb
+++ b/src/logistic-regression/main.ipynb
@@ -50,8 +50,13 @@
     "    def _loss(self, h, y):\n",
     "        return -np.mean(y * np.log(h) + (1 - y) * np.log(1 - h))\n",
     "\n",
+    "    @property\n",
+    "    def _record_loss_interval(self):\n",
+    "        return max(1, self._max_iter // 10)\n",
+    "\n",
     "    def fit(self, X, y):\n",
     "        m, n = X.shape\n",
+    "\n",
     "        self._theta = np.random.randn(m, 1) * 0.01\n",
     "\n",
     "        for iteration in range(self._max_iter):\n",
@@ -60,7 +65,7 @@
     "            gradient = np.dot(X, (h - y).T) / n\n",
     "            self._theta -= self._learning_rate * gradient\n",
     "\n",
-    "            if (iteration + 1) % 100 == 0:\n",
+    "            if (iteration + 1) % self._record_loss_interval == 0:\n",
     "                self._losses.append(self._loss(h, y))\n",
     "\n",
     "    def predict(self, X):\n",
@@ -69,7 +74,10 @@
     "        return int(h > 0.5)\n",
     "\n",
     "    def draw_loss(self):\n",
-    "        plt.plot(np.arange(1, len(self._losses) + 1) * 100, self._losses)\n",
+    "        plt.plot(\n",
+    "            np.arange(1, len(self._losses) + 1) * self._record_loss_interval,\n",
+    "            self._losses,\n",
+    "        )\n",
     "        plt.xlabel(\"迭代次数\")\n",
     "        plt.ylabel(\"损失函数值\")\n",
     "        plt.title(\"损失函数曲线\")\n",
@@ -117,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "训练模型，绘制损失值曲线。"
+    "训练模型，绘制损失函数曲线。"
    ]
   },
   {
@@ -143,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "预测标签，测试准确率。"
+    "在训练集和测试集上分别测试准确率。"
    ]
   },
   {
